fix spacing

--- a/styles/App.css
+++ b/styles/App.css
@@ -47,7 +47,7 @@ body {
   height: 100%;
   display: grid;
   grid-template-rows: 100%;
-  grid-template-columns: 1fr 50% 25% 5fr;
+  grid-template-columns: 1fr 50% 25% 10%;
   column-gap: 10px;
 }
 
